--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<!--app-heroes></app-heroes-->
+<!--app-hero-detail></app-hero-detail-->
+<!--app-forms></app-forms-->
+<app-reactiveforms></app-reactiveforms>
